--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "yarn prettier --write ."
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,6 +18,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "18.7.20",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
